@@ -192,3 +192,6 @@ class StringRef:
         self.manager.set_nml_globals()
         return grfstrings.get_translation(self.string_nmlexpr)
 
+    def __eq__(self, ref):
+        print('EQ', self, ref, self.manager is ref.manager, self.nmlexpr == ref.nmlexpr, self.manager is ref.manager and self.nmlexpr == ref.nmlexpr)
+        return self.manager is ref.manager and self.nmlexpr == ref.nmlexpr
