@@ -23,6 +23,7 @@
 - Add support for the extended format in Action1.
 - Add `main` function to handle command line arguments.
 - Add support for using StringRef in Action 0x14 (`SetProperties`).
+- Add support for using StringRef as `NewGRF` `name` and `description`.
 - Remove `Mask` offset, add `FileMask` absolute positioning.
 
 - lib: Fix `CallbackManager.make_switches` for non-vehicle features.
